# merlinCLI

./: .gitignore  =13.7  CONFIG.md  README.md  activate.sh  pyproject.toml
src/merlincli/: __init__.py  __main__.py  config.py  pipeline.py
src/merlincli/analysis/: engine.py
src/merlincli/dashboard/: app.py
src/merlincli/data/: manager.py  market_client.py  news_social_client.py
src/merlincli/indicators/: engine.py
src/merlincli/insights/: llm_client.py
src/merlincli/outputs/: cli.py
src/merlincli/sentiment/: engine.py
src/merlincli/storage/: cache.py
